[css] Fix alignment of tables #6331

--- a/assets/scss/trading.sass
+++ b/assets/scss/trading.sass
@@ -27,6 +27,8 @@
         tr
           td:first-child
             display: table-cell !important
+        td
+          padding-left: calc(0.75rem + 0.65em)
 
 .top-holders
   td:not(:first-child)
